Resolve layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,10 +5,10 @@
 @layer components {
     /* main */
     .main-container {
-      @apply flex min-h-max flex-col items-center max-md:pb-0 sm:px-10 w-screen
+      @apply flex min-h-max flex-col items-center max-md:pb-0 px-0 overflow-hidden overflow-y-hidden
     }
 
-    .resume-button {
+    .hamburger-menu-button{
         @apply inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600
     }
 
